# cmake-starter

./: CMakeLists.txt
cmakefile-for-shared-lib/: CMakeLists.txt
cmakefile-for-static-lib/: CMakeLists.txt
